--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <div id="container">
       <h1 id="firstTitle">Pesquisa de usuários</h1>
 
-      <h4 id="loading"></h4>
-
-      <span>
+      <span id="search">
         <input
           type="text"
           name="inputSearch"
@@ -33,11 +31,8 @@
 
       <div id="details">
         <div id="usersList" class="details"></div>
-        <div id="statisticalData" class="details">
-          <p id="male"></p>
-          <p id="female"></p>
-          <p id="ageSum"></p>
-          <p id="ageAverage"></p>
+        <div id="statisticalData">
+          <div class="dataDetails"></div>
         </div>
       </div>
     </div>
